# speech-speed-tempo-classification

./: LICENSE  README.md  pyproject.toml
data/: README.md
models/baseline_fbank/: model.speed.joblib  model.tempo.joblib
models/baseline_signal/: model.speed.joblib  model.tempo.joblib
src/: demo.ipynb  evaluate.py
src/baseline_fbank/: train_speed.py  train_tempo.py
src/baseline_signal/: train_speed.py  train_tempo.py
