[project]
name = "COM6018_assignment2"
version = "0.1.0"
description = "Environment for COM6018 Assignment 2"
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "ipywidgets>=8.1.8",
    "joblib>=1.5.2",
    "librosa>=0.11.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sounddevice>=0.5.3",
    "soundfile>=0.13.1",
    "tqdm>=4.67.1",
    "typer>=0.20.0",
]
